--- a/sts_xtjkt.html
+++ b/sts_xtjkt.html
@@ -13,6 +13,9 @@
       body {
         font-family: "Inter", sans-serif;
         background-color: #f0f9ff; /* sky-50 */
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10+ and Edge */
+        user-select: none; /* Standard syntax */
       }
       .question-card {
         background-color: #ffffff;
