--- a/sts_pplg.html
+++ b/sts_pplg.html
@@ -52,6 +52,13 @@
         padding: 4rem;
         white-space: nowrap;
       }
+      .card {
+        padding: 12px 8px;
+        /* border: 1px solid black; */
+        border-radius: 20px;
+        margin-top: 8px;
+        background-color: aquamarine;
+      }
       @media print {
         body * {
           visibility: hidden;
@@ -92,6 +99,19 @@
             SOAL STS XI PPLG
           </h5>
           <p class="mt-2 text-lg header-subtitle">SMK AL FALAH TANJUNGJAYA</p>
+          <div class="card">
+            <p style="color: red; font-weight: bold">
+              SILAHKAN COPAS JIKA BISA
+            </p>
+            <p>
+              <i
+                >These questions may seem difficult, but trust me, nothing is
+                more powerful than your mind. Work calmly. I'm not waiting for
+                perfect results, I'm just waiting for your smile after the
+                struggle.</i
+              >
+            </p>
+          </div>
         </header>
 
         <div class="space-y-6">
