--- a/sts_xiimp.html
+++ b/sts_xiimp.html
@@ -43,6 +43,14 @@
         align-items: center;
         overflow: hidden;
       }
+
+      .card {
+        padding: 12px 8px;
+        /* border: 1px solid black; */
+        border-radius: 20px;
+        margin-top: 8px;
+        background-color: aquamarine;
+      }
       .watermark {
         color: #0ea5e9;
         opacity: 0.08;
@@ -92,6 +100,19 @@
             SOAL STS AI XII MP 2
           </h5>
           <p class="mt-2 text-lg header-subtitle">SMK AL FALAH TANJUNGJAYA</p>
+          <div class="card">
+            <p style="color: red; font-weight: bold">
+              SILAHKAN COPAS JIKA BISA
+            </p>
+            <p>
+              <i
+                >These questions may seem difficult, but trust me, nothing is
+                more powerful than your mind. Work calmly. I'm not waiting for
+                perfect results, I'm just waiting for your smile after the
+                struggle.</i
+              >
+            </p>
+          </div>
         </header>
 
         <div class="space-y-6">
