--- a/sts_xiimp.html
+++ b/sts_xiimp.html
@@ -109,7 +109,7 @@
                 >These questions may seem difficult, but trust me, nothing is
                 more powerful than your mind. Work calmly. I'm not waiting for
                 perfect results, I'm just waiting for your smile after the
-                struggle.</i
+                struggle 💪 .</i
               >
             </p>
           </div>
