--- a/sts_pplg.html
+++ b/sts_pplg.html
@@ -111,6 +111,7 @@
                 struggle 💪.</i
               >
             </p>
+            <p>- <i>Firman Abdul Rohman As Ciman</i> -</p>
           </div>
         </header>
 
