--- a/sts_xiipplg.html
+++ b/sts_xiipplg.html
@@ -112,6 +112,7 @@
                 struggle 💪.</i
               >
             </p>
+            <p>- <i>Firman Abdul Rohman As Ciman</i> -</p>
           </div>
         </header>
 
